Bug 216393 - AudioContext does not start rendering until an AudioNode is constructed
Summary: AudioContext does not start rendering until an AudioNode is constructed
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: Web Audio (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks: 212611
  Show dependency treegraph
 
Reported: 2020-09-10 18:13 PDT by Chris Dumez
Modified: 2020-09-11 08:29 PDT (History)
11 users (show)

See Also:


Attachments
Patch (4.31 KB, patch)
2020-09-10 18:15 PDT, Chris Dumez
eric.carlson: review+
Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2020-09-10 18:13:43 PDT
AudioContext does not start rendering until an AudioNode is constructed. This is not as per specification and does not match Chrome's behavior.
Comment 1 Chris Dumez 2020-09-10 18:15:55 PDT
Created attachment 408503 [details]
Patch
Comment 2 Eric Carlson 2020-09-10 20:54:42 PDT
Comment on attachment 408503 [details]
Patch

View in context: https://bugs.webkit.org/attachment.cgi?id=408503&action=review

> Source/WebCore/Modules/webaudio/BaseAudioContext.cpp:144
> +    // Lazy initialization is what starts rendering so we schedule a task here to make sure lazy

s/initialization is what starts/initialization starts/
Comment 3 Chris Dumez 2020-09-11 08:29:00 PDT
Committed r266922: <https://trac.webkit.org/changeset/266922>
Comment 4 Radar WebKit Bug Importer 2020-09-11 08:29:13 PDT
<rdar://problem/68711478>