AudioContext does not start rendering until an AudioNode is constructed https://bugs.webkit.org/show_bug.cgi?id=216393

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

Rebaseline test that is now passing.

* web-platform-tests/webaudio/the-audio-api/the-audiocontext-interface/constructor-allowed-to-start-expected.txt:

Source/WebCore:

AudioContext does not start rendering until an AudioNode is constructed. This is not as per specification
and does not match Chrome's behavior.

Specification section is here:
- https://www.w3.org/TR/webaudio/#dom-audiocontext-audiocontext
and says
"If the context is allowed to start, send a control message to start processing."

No new tests, rebaselined existing test.

* Modules/webaudio/BaseAudioContext.cpp:
(WebCore::BaseAudioContext::BaseAudioContext):
* dom/Document.cpp:
(WebCore::Document::addMediaCanStartListener):

Canonical link: https://commits.webkit.org/229236@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@266922 268f45cc-cd09-0410-ab3c-d52691b4dbfc